# internal/middlewares/errorhandler.middleware.go
@@ -1,18 +1,1 @@
 package middlewares
-
-import (
-	"github.com/gin-gonic/gin"
-	"github.com/poin4003/eCommerce_golang_api/pkg/response"
-)
-
-func AuthenMiddleware() gin.HandlerFunc {
-	return func(c *gin.Context) {
-		token := c.GetHeader("Authorization")
-		if token != "valid-token" {
-			response.ErrorResponse(c, response.ErrInvalidToken, "")
-			c.Abort()
-			return
-		}
-		c.Next()
-	}
-}
